# load-gltf

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py
include/: load-gltf.h
include/load-gltf/: defs.hpp  load-gltf.hpp  structs.hpp
src/: load-gltf.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
